tests/sources/invalid/classes/constructor_param_bad_type.fire
// Parser error: constructor parameter with a token that isn't a valid
// parameter type.

class Foo {
    x: int32;

    fn Foo(x: +) {  //~ ERROR FS-PARSE-0010 @15
        this.x = x;  //~ ERROR FS-PARSE-0003 @9
//~^ ERROR FS-PARSE-0003 @18
    }
}
